[gd_scene load_steps=7 format=3 uid="uid://v3mbc6hv7c58"]

[ext_resource type="PackedScene" uid="uid://dygr1xb4ebflm" path="res://player.tscn" id="1_7w3g0"]
[ext_resource type="Script" path="res://main.gd" id="1_ap55k"]
[ext_resource type="PackedScene" uid="uid://cpyflcpj0jwue" path="res://mob.tscn" id="2_725ue"]
[ext_resource type="FontFile" uid="uid://d3ffbma3bxx1v" path="res://fonts/Xolonium-Regular.ttf" id="4_l1tnk"]
[ext_resource type="Script" path="res://hud.gd" id="4_uqnvd"]

[sub_resource type="Curve2D" id="Curve2D_jnaat"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1440, 0, 0, 0, 0, 0, 1440, 960, 0, 0, 0, 0, 0, 960, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_ap55k")
mob_scene = ExtResource("2_725ue")

[node name="Player" parent="." instance=ExtResource("1_7w3g0")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_jnaat")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("4_uqnvd")

[node name="ScoreLabel" type="Label" parent="HUD"]
anchors_preset = -1
anchor_left = 0.483333
anchor_top = 0.0333333
anchor_right = 0.514583
anchor_bottom = 0.114583
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_l1tnk")
theme_override_font_sizes/font_size = 64
text = "0"
metadata/_edit_use_anchors_ = true

[node name="Message" type="Label" parent="HUD"]
anchors_preset = -1
anchor_left = 0.311111
anchor_top = 0.3
anchor_right = 0.689583
anchor_bottom = 0.38125
offset_left = -3.05176e-05
offset_right = -6.10352e-05
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_l1tnk")
theme_override_font_sizes/font_size = 64
text = "Dodge a creeps!"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="StartButton" type="Button" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -60.0
offset_right = 120.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("4_l1tnk")
theme_override_font_sizes/font_size = 64
text = "Start
"

[node name="MessageTimer" type="Timer" parent="HUD"]
wait_time = 2.0
one_shot = true

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="pressed" from="HUD/StartButton" to="HUD" method="_on_start_button_pressed"]
[connection signal="timeout" from="HUD/MessageTimer" to="HUD" method="_on_message_timer_timeout"]
